update BF1001 for F25 - v 4.2

--- a/BF/BF1001-Driver2025.tex
+++ b/BF/BF1001-Driver2025.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2024 by Daniel R. Driver.
+% Copyright (c) 2025 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,8 +12,8 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-%\UGtrue % \UG{true}{false} terms for undergraduate students
-\coursecode[4.1.1\UG{-UG}{}]{BF 1001\UG{-UG}{}}
+\UGtrue % \UG{true}{false} terms for undergraduate students
+\coursecode[4.2\UG{-UG}{}]{BF 1001\UG{-UG}{}}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -44,17 +44,18 @@
 %   - Fall 2022(Int) - run in parallel as DTS 2000: Intro to the Old Testament
 %   - Fall 2023 - Version 4.0/-UG; back to campus (only); only text: NJPS Study Bible
 %   - Fall 2024 - Version 4.1/-UG; hybrid; added textbook: Davis 2019
+%   - Fall 2025 - Version 4.2/-UG; hybrid
 
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{daniel.driver@astheology.ns.ca}
-\officehours{Mondays, 1:00--3:00 \PM}
+\officehours{Thursdays, 1:00--3:00 \PM}
 
-\semester{Fall 2024}
-\meets{Mondays}% \meets{on}{at}{in} - on could be: \Int{Mondays}{Thursdays}
-      {10:00 \AM--12:30 \PM}% if online, it prints "From 9:00 AM"
-      {Flahiff Room}% if online, it prints "Brightspace" with link
+\semester{Fall 2025}
+\meets{Thursdays}% \meets{on}{at}{in} - on could be: \Int{Mondays}{Thursdays}
+      {9:00--11:30 \AM\ Atlantic}% if online, it prints "From 9:00 AM"
+      {Classroom 3/Teams}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for 3000-level courses in HB]{% copy from the current Academic Calendar; [] for prereqs
 	The First Testament of Christian Scripture is a fundamental part of
@@ -236,32 +237,33 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Gen 1--11              & Gen 1; 9           & Syllabus            &  9 Sep. \\
-		& Gen 12--36             & Gen 12; 22         & \cite[ch. 1]{ed19}  & 16 Sep. \\
-		& Exod 1--18             & Exod 3; 16         & \cite[ch. 2a]{ed19} & 23 Sep. \\
-		& Exod 19--34            & Exod 20--21; 34    & \cite[ch. 2b]{ed19} & 30 Sep. \\
-	\noclass{Nat'l Day for T\&R (self-study of Sinai covenant)}             & 30 Sep. \\
-	    & Lev 1--10; 25--26      & Lev 10; 26         & \cite[ch. 3]{ed19}  &  7 Oct. \\
-	\noclass{Thanksgiving (but meet Mon of Reading Week)}                   & 14 Oct. \\
-%	\noclass{Reading Week from Tuesday to Friday}                           & 22--25 Oct. \\
-%	\reminder{A short paper is \textbf{due} before the \textbf{sixth week} of class}{17 Oct.} \\% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
-		& Deut 1--16; 34         & Deut 6; 16         & \cite[ch. 5]{ed19}  & 21 Oct. \\ [1ex]
+		& Gen 1--11              & Gen 1; 9           & Syllabus            &  4 Sep. \\
+		& Gen 12--36             & Gen 12; 22         & \cite[ch. 1]{ed19}  & 11 Sep. \\
+		& Exod 1--18             & Exod 3; 16         & \cite[ch. 2a]{ed19} & 18 Sep. \\
+		& Exod 19--34            & Exod 20; 34        & \cite[ch. 2b]{ed19} & 25 Sep. \\
+%	\noclass{Nat'l Day for T\&R (self-study of Sinai covenant)}             & 30 Sep. \\
+	    & Lev 1--10; 25--26      & Lev 10; 26         & \cite[ch. 3]{ed19}  &  2 Oct. \\
+%	\noclass{Thanksgiving (but meet Mon of Reading Week)}                   & 14 Oct. \\
+		& Deut 1--16; 34         & Deut 6; 16         & \cite[ch. 5]{ed19}  &  9 Oct. \\
+	\reminder{A short paper is \textbf{due} before the \textbf{seventh week} of class}{15 Oct.} \\ [1ex]% Have moved btw wks 5, 6, and 7 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Josh 1--12; Judg 1--5; 19--21 & Josh 1; Judg 19 & \cite[ch. 6--7]{ed19} & 28 Oct. \\
-		& Ruth 1--4; 1 Sam 1--31 & 1 Sam 1--2; 8      & \cite[ch. 8]{ed19}  &  4 Nov. \\
-	\noclass{Remembrance Day}                                               & 11 Nov. \\
-		& 2 Sam 1--1 Kgs 12      & 2 Sam 7; 1 Kgs 11  & \cite[ch. 9]{ed19}  & 18 Nov. \\
-		& Hosea 1--Micah 7       & Joel 2; Jonah 4    & \cite[ch. 10]{ed19} & 25 Nov. \\ [1ex]
+		& Josh 1--12; Judg 1--5; 19--21 & Josh 1; Judg 19 & \cite[ch. 6--7]{ed19} & 16 Oct. \\
+	\noclass{Reading Week}                                                  & 20--24 Oct. \\ % sometimes: Reading Week from Tuesday to Friday
+		& Ruth 1--4; 1 Sam 1--31 & 1 Sam 1--2; 8      & \cite[ch. 8]{ed19}  & 30 Oct. \\
+%	\noclass{Remembrance Day}                                               &  6 Nov. \\
+		& 2 Sam 1--1 Kgs 12      & 2 Sam 7; 1 Kgs 11  & \cite[ch. 9]{ed19}  & 13 Nov. \\
+		& Hosea 1--Micah 7       & Joel 2; Jonah 4    & \cite[ch. 10]{ed19} & 20 Nov. \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
 %	\reminder{A short paper is \textbf{due} before the \textbf{twelfth week} of class}{5 Dec.} \\% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
-		& Pss 1--8; 51--60; 89--90 & Pss 1--2; 51; 90 & \cite[ch. 14]{ed19} &  2 Dec. \\
-		& Prov 1--9; Eccl 1--12   & Prov 8; Eccl 1; 7 & \cite[ch. 15]{ed19} &  9 Dec. \\
+		& Pss 1--8; 51--60; 89--90 & Pss 1--2; 51; 90 & \cite[ch. 14]{ed19} & 27 Nov. \\
+	\reminder{A short paper is \textbf{due} before the \textbf{last class}}{3 Dec.} \\
+		& Prov 1--9; Eccl 1--12   & Prov 8; Eccl 1; 7 & \cite[ch. 15]{ed19} &  4 Dec. \\
 
-	\reminder{End of Term: Final marks are due for all courses}{13 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{9 Dec.} \\
 
 	\bottomrule
   \end{tabular}
@@ -287,16 +289,16 @@ The grade structure for \ccode has the following elements.
 	translation. Mark up your Bible. Make notes as you read. Come
 	prepared to share highlights with the class.
 
-	\item Two \textbf{reflection papers} give students an opportunity to
+	\item Two \textbf{oral reflections} give students an opportunity to
 	consider their relationship to the Scriptures of Israel and to
-	reflect on its development over the course. Each of these papers is
-	to be about \UG{1,000}{1,500} words long, including any footnotes.
-	The first paper is due before the third week of class; the second
-	paper is due by the final day of class.
+	reflect on its development over the course. Each live-voice
+	presentation is to last between seven and ten minutes. The first is
+	due at the start of the third class; the second is due at the start
+	of the last class.
 
 	\begin{enumerate}
 
-		\item Before the third week, answer the following question:
+		\item By the third class, answer the following question:
 		\emph{What does my tradition tell me about the Scriptures of
 		Israel?} To start, identify a tradition that broadly informs
 		your thinking about the Tanakh/OT/HB. Our traditions are often
@@ -313,18 +315,18 @@ The grade structure for \ccode has the following elements.
 		should consider what pertains to them. (Anglo-American celebrity
 		atheists embody a tradition, too, for example.)
 
-		\item Before the final class, answer the following question:
+		\item By the final class, answer the following question:
 		\emph{What would I like to say to my tradition about the
-		Scriptures of Israel?} Revisit your first reflection paper and
-		the tradition you identified at the start of the term. Then, as
-		you think about what you might want to affirm, critique, or
-		reform in that tradition, reflect on what we have studied. Based
-		on what you have learned, what is something you would say about
-		the Tanakh/OT/HB to others today who are shaped by your
-		tradition? If desired, you may craft this paper as an open
-		letter to a peer (someone like you before this course) or an
-		authority (an official leader or public figure). In your
-		discussion, incorporate at least two good examples from the
+		Scriptures of Israel?} Revisit your first reflection and the
+		tradition you identified at the start of the term. Then, as you
+		think about what you might want to affirm, critique, or reform
+		in that tradition, reflect on what we have studied. Based on
+		what you have learned, what is something you would say about the
+		Tanakh/OT/HB to others today who are shaped by your tradition?
+		If desired, you may craft this statement as words to a peer
+		(someone like you before this course) or an open letter or
+		address to an authority (an official leader or public figure).
+		In your answer, incorporate at least two good examples from the
 		Bible. Whether you make points broad or narrow, be sure to cite
 		chapter and verse.
 
@@ -349,8 +351,7 @@ The grade structure for \ccode has the following elements.
 	footnotes. The professor encourages, but does not require, the
 	selection of shorter passages from within the focal chapters listed
 	in the course outline (\autoref{schedule}). The first paper is due
-	before the sixth week; the second paper is due before the eleventh
-	week.
+	before the seventh week; the second paper is due by the last class.
 
 	% Deadlines have sometimes been wks 6 and 11 or else wks 5 and 10
 	% depending on scheduling issues. Make sure that what is stated here
@@ -358,11 +359,11 @@ The grade structure for \ccode has the following elements.
 
 	\begin{enumerate}
 
-		\item Before the sixth week, compose and submit an exegetical
+		\item Before the seventh week, compose and submit an exegetical
 		analysis of any suitably short passage from the \textbf{Law}
 		(Torah).
 
-		\item Before the eleventh week, compose and submit an
+		\item Before the last class, compose and submit an
 		exegetical analysis of any suitably short passage from the
 		\textbf{Prophets} (Former or Latter).
 
@@ -370,7 +371,8 @@ The grade structure for \ccode has the following elements.
 		selected text. This thesis should be clearly identifiable as a
 		single sentence in an obvious location. Each paper should
 		interact with at least \UG{four (4)}{six (6)} sources or
-		commentators, not counting lectures (which need not be cited).
+		commentators, not counting lectures (which do not necessarily
+		need to be cited).
 
 		\item See my \href{https://danieldriver.com/assets/pdf/handouts/Guidelines_for_Papers.pdf}{“Guidelines for Papers and Other Written Assignments” (PDF)}.
 		See also \cite[chs. 3, 5, 8, 11]{rlgs} and \cite{sbl2}.
@@ -451,8 +453,8 @@ The breakdown for the semester's total work is shown in
   \begin{tabular}{lr}
     \toprule
     Notes \& Quotes     & 10\% \\
-    Reflection Paper 1  & 15\% \\
-    Reflection Paper 2  & 15\% \\
+    Oral Reflection 1   & 15\% \\
+    Oral Reflection 2   & 15\% \\
     Exegetical Essay 1  & 30\% \\
     Exegetical Essay 2  & 30\% \\
 %    \Int{Online Presentation}{Seminar Discussion} & 20\% \\
