update HB 3115 for F25 - v 1.5

--- a/includes/variables.tex
+++ b/includes/variables.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{variables.tex}[2022/09/11 v2.3 -- Syllabus variables]
+\ProvidesFile{variables.tex}[2025/09/06 v2.3.1 -- Syllabus variables]
 
 \usepackage{xspace} % make manual spaces (like \mycmd\ ) unnecessary
 \usepackage{xifthen} % provides \isempty test
@@ -40,7 +40,7 @@
   \renewcommand\pphone{\addfontfeatures{Numbers=Monospaced}#1\xspace}}
 \newcommand\email[1]{
   \renewcommand\pemail{\href{mailto:#1}{#1}\xspace}}
-\newcommand\officehours[2][AST Library/Teams]{
+\newcommand\officehours[2][AST Library/MS Teams]{
   \renewcommand\poffice{#1\xspace}
   \renewcommand\phours{\href{https://outlook.office.com/bookwithme/user/b97b147a2e5c43b4a0e200c2cb630b77@astheology.ns.ca?anonymous}{#2}\xspace}%
   }
