fix + clarify assignment

--- a/HB/HB3115-Exodus-Driver2025.tex
+++ b/HB/HB3115-Exodus-Driver2025.tex
@@ -279,9 +279,9 @@ The grade structure for \ccode has the following elements.
 	or ideas stand out to you? \UG{Undergraduate students should augment
 	their observations with the footnotes in a good Study
 	Bible.}{Graduate students must augment this work by consulting a
-	different commentaries in each half of the class, ideally from two
-	different eras.} All students should come prepared to share and
-	discuss your observations with the class.
+	unique commentator, to be changed midway through the course to a
+	commentator from a different era.} All students should come prepared
+	to share and discuss your observations with the class.
 
 	\item Imagine that a church press is releasing a new edition of a
 	classic treatise on Moses, and you have agreed to write a new
